E2J/part4/t10.output
running e2j
compiling the Java generated code
My_e2j.java:3: error: unclosed string literal
System.out.println"
                  ^
My_e2j.java:3: error: not a statement
System.out.println"
          ^
My_e2j.java:4: error: unclosed string literal
"
^
My_e2j.java:5: error: unclosed string literal
System.out.println"
                  ^
My_e2j.java:5: error: not a statement
System.out.println"
          ^
My_e2j.java:6: error: unclosed string literal
"
^
My_e2j.java:7: error: unclosed string literal
System.out.println"
                  ^
My_e2j.java:7: error: not a statement
System.out.println"
          ^
My_e2j.java:8: error: unclosed string literal
"
^
9 errors
